# cpp_brainfuck_interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: interpreter.h
include/utils/: brainfuck_utils.h  build_bracket_map.h  clean_the_code.h  open_brainfuck_file.h
src/: interpreter.cpp  main.cpp
src/utils/: brainfuck_utils.cpp  build_bracket_map.cpp  clean_the_code.cpp  open_brainfuck_file.cpp
